# Diploma

./: CMakeLists.txt  README.md
include/: Buffer.hpp  Consumer.hpp  IFunctionCaller.hpp  PBCController.hpp  Producer.hpp  ProducerConsumer.hpp  defines.hpp
performance/: performance_testing.cpp  test_text_2.txt
src/: main.cpp
test/: creation.cpp  execution.cpp  helpers.hpp  test.cpp  test_helpers.cpp  test_helpers.hpp
